# FrozenScorch

./: .gitignore  .gitmodules  .gn  BUILD.gn  CMakeLists.txt  OpenRenderer.bee  gn_gen.sh
CodeAssist/: CMakeListsTemplate.txt  update_cmake_sources.py
Dependencies/Code/imgui/: imgui_demo.cpp
Dependencies/Code/lodepng/: lodepng.h
res/: basic.metal  basic_data.h  basic_shader.fs  basic_shader.vs  mapper2d_shader.fs  mapper2d_shader.vs
res/shaders/Metal/: ShaderData.h  basic.metal
src/: Config.h  Context.cpp  Context.h  Display.cpp  Display.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
src/Application/: Application.cpp  Application.h  Camera.cpp  Camera.h  KeyCodes.h
src/Application/Events/: Event.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
src/Backend/: Var.h
src/Backend/Metal/: Display.cpp  Display.h
src/Backend/OpenGL/: Context.h  Utils.h  VarTypes.h
src/ECS/: Component.h  ECS.h  Entity.h  Event.h  System.h
src/Editor/: Editor.cpp  Editor.h  ScenePanel.cpp  ScenePanel.h
src/GraphicsAPI/Generic/: Constructors.h  Context.cpp  Context.h  Display.cpp  Display.h  IndexBuffer.h  MainLoop.h  Shader.h  ShaderVars.h  Texture.h  Uniform.h  Var.h  Vertex.h  VertexArray.h  VertexBuffer.h
src/GraphicsAPI/Metal/: Context.h  Display.cpp  Display.h  IndexBuffer.cpp  IndexBuffer.h  MainLoop.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/GraphicsAPI/OpenGL/: Context.h  Display.cpp  Display.h  IndexBuffer.cpp  IndexBuffer.h  MainLoop.h  Shader.cpp  Shader.h  ShaderParser.cpp  ShaderParser.h  Texture.h  VarTypes.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Math/: Matrix4f.cpp  Matrix4f.h  Trigonometry.h  Vector2f.h  Vector3f.cpp  Vector3f.h
src/Parsers/: ObjParser.cpp  ObjParser.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Renderer/Metal/: Renderer.cpp  Renderer.h
src/Renderer/OpenGL/: Renderer.cpp  Renderer.h
src/Runtime/Debug/: Debug.h
src/Runtime/Image/: Image.h
src/Runtime/MacOS/: Window.h  Window.mm
src/Runtime/PNGLoader/: PNGLoader.h
src/Runtime/Utils/: DrawLoop.h  FS.h  SizeOfData.h
src/Scene/: Scene.cpp  Scene.h
src/Scene/Components/: Components.h
src/Scene/Events/: KeyboardInput.h  MouseInput.h
src/Scene/Systems/: CameraSystem.h  MouseRayCastingSystem.h  RenderSystem.h
src/Support/MacOS/: KeyCodes.h  Window.h  Window.mm
src/math/: Matrix4f.h  Numbers.h  Vector3f.h
